syntax = "proto3";

package dropnshop;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (SafeUserResponse);
  rpc GetUser (GetUserRequest) returns (SafeUserResponse);
  rpc GetUserByUsername (GetUserByUsernameRequest) returns (UserResponse);
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
  rpc UpdateUser (UpdateUserRequest) returns (SafeUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string passwordHash = 4;
  string createdAt = 5;
}

message SafeUser {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string createdAt = 4;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string passwordHash = 3;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message CheckPasswordRequest {
  int32 id = 1;
  string password = 2;
}

message ListUsersRequest {}

message UpdateUserRequest {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string passwordHash = 4;
}

message DeleteUserRequest {
  int32 id = 1;
}

message SafeUserResponse {
  SafeUser user = 1;
}

message UserResponse {
  User user = 1;
}

message ListUsersResponse {
  repeated SafeUser users = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message CheckPasswordResponse {
  bool success = 1;
}
